[package]
name = "rocksdb-server"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@google.com"]

[[bin]]
name = "server"
path = "src/bin/run-server.rs"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }

# For the routeguide example
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }
