[package]
name = "rocksdb-server"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@google.com"]

[[bin]]
name = "server"
path = "src/bin/run-server.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
prost = "0.4"
prost-derive = "0.4"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }

[build-dependencies]
tower-grpc-build = { path = "../tower-grpc-build" }
